CHATS_SIT/force-app/main/default/objects/T_CHILD_SUP__c/validationRules/Req_HowVerified_If_VerifType_Writtn.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_HowVerified_If_VerifType_Writtn</fullName>
    <active>true</active>
    <description>How Verified field is must for verified = &quot;Written Verification&quot;.</description>
    <errorConditionFormula>AND( NOT( IDN_CLIENT__r.Is_Peak_Data__c ),ISPICKVAL(IND_VRFYD__c, &quot;V&quot;) , 
     ISBLANK(TEXT(CDE_SOURCE_VRFD_CODA__c) ) 
)</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFD_CODA__c</errorDisplayField>
    <errorMessage>How Verified field is must for verified = &quot;Written Verification&quot;.</errorMessage>
</ValidationRule>