CHATS_SIT/force-app/main/default/objects/T_CHILD_SUP__c/validationRules/Warning_Message_before_saving_the_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Warning_Message_before_saving_the_record</fullName>
    <active>true</active>
    <description>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case</description>
    <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),OR(IDN_CLIENT__r.Is_Primary_Parent_Caretaker__c,IDN_CLIENT__r.Age__c &gt;= 19, AND(IDN_CLIENT__r.Age__c &lt; 19, 
IDN_CLIENT__r.Has_Allowed_Relationship__c)),NOT(Ignore__c))</errorConditionFormula>
    <errorMessage>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case(to continue saving please tick Ignore checkbox)</errorMessage>
</ValidationRule>