CHATS_SIT/force-app/main/default/objects/T_CHILD_SUP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IND_CASE_OPEN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>